<resources>
    <string name="app_name">Kotlin_Sumin</string>
    <string name="symbols_template">%s / %s</string>
    <string name="last_update_template">Время последнего обновления: %s"</string>
    <string name="slash"> / </string>
    <string name="price">Цена: </string>
    <string name="minPerDay">Минимум за день: </string>
    <string name="maxPerDay">Максимум за день: </string>
    <string name="last_market">Последняя сделка: </string>
    <string name="updated">Обновлено: </string>
</resources>