<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CoinDetailActivity">

    <ImageView
        android:id="@+id/ivLogoCoin"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@mipmap/ic_launcher"/>

    <TextView
        android:id="@+id/tvFromSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_purple"
        app:layout_constraintBottom_toBottomOf="@+id/tvSlash"
        app:layout_constraintEnd_toStartOf="@+id/tvSlash"
        app:layout_constraintTop_toTopOf="@+id/tvSlash"
        android:textSize="26sp"
        tools:text="BTC"/>

    <TextView
        android:id="@+id/tvSlash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_purple"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogoCoin"
        android:text="@string/slash"
        android:textSize="26sp"/>

    <TextView
        android:id="@+id/tvToSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_green_light"
        app:layout_constraintStart_toEndOf="@+id/tvSlash"
        app:layout_constraintTop_toTopOf="@+id/tvSlash"
        app:layout_constraintBottom_toBottomOf="@+id/tvSlash"
        android:textSize="26sp"
        tools:text="USD"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvSlash"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tvPriceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/price"
            android:paddingVertical="8dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvPriceLabel"
            android:paddingVertical="8dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:text="389.2"
            android:layout_marginStart="20dp"
            />

        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/cardview_dark_background"
            app:layout_constraintTop_toBottomOf="@id/tvPriceLabel"/>


        <TextView
            android:id="@+id/tvMinPriceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/line1"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/minPerDay"
            android:paddingVertical="8dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/tvMinPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/line1"
            app:layout_constraintStart_toEndOf="@id/tvMinPriceLabel"
            android:paddingVertical="8dp"
            android:textColor="@android:color/holo_red_light"
            android:textSize="20sp"
            tools:text="4543.2"
            android:layout_marginStart="20dp"
            />

        <View
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/cardview_dark_background"
            app:layout_constraintTop_toBottomOf="@id/tvMinPriceLabel"/>


        <TextView
            android:id="@+id/tvMaxPriceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/line2"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/maxPerDay"
            android:paddingVertical="8dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/tvMaxPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/line2"
            app:layout_constraintStart_toEndOf="@id/tvMaxPriceLabel"
            android:paddingVertical="8dp"
            android:textColor="@android:color/holo_green_light"
            android:textSize="20sp"
            tools:text="4543.2"
            android:layout_marginStart="20dp"
            />

        <View
            android:id="@+id/line3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/cardview_dark_background"
            app:layout_constraintTop_toBottomOf="@id/tvMaxPriceLabel"/>


        <TextView
            android:id="@+id/tvLastMarketLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/line3"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/last_market"
            android:paddingVertical="8dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/tvLastMarket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/line3"
            app:layout_constraintStart_toEndOf="@id/tvLastMarketLabel"
            android:paddingVertical="8dp"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            tools:text="4543.2"
            android:layout_marginStart="20dp"
            />

        <View
            android:id="@+id/line4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/cardview_dark_background"
            app:layout_constraintTop_toBottomOf="@id/tvLastMarketLabel"/>

        <TextView
            android:id="@+id/tvUpdatedLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/line4"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/updated"
            android:paddingVertical="8dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/tvUpdated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/line4"
            app:layout_constraintStart_toEndOf="@id/tvUpdatedLabel"
            android:paddingVertical="8dp"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            tools:text="21:05:16"
            android:layout_marginStart="20dp"
            />




    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>